@@ -2,20 +2,23 @@ package org.atdev.artrip.service;
 
 import lombok.RequiredArgsConstructor;
 import org.atdev.artrip.domain.auth.User;
+import org.atdev.artrip.global.apipayload.code.status.KeywordErrorCode;
 import org.atdev.artrip.global.apipayload.code.status.UserErrorCode;
 import org.atdev.artrip.repository.UserRepository;
 import org.atdev.artrip.domain.keyword.Keyword;
 import org.atdev.artrip.domain.keyword.UserKeyword;
 import org.atdev.artrip.repository.KeywordRepository;
 import org.atdev.artrip.repository.UserKeywordRepository;
-import org.atdev.artrip.controller.dto.response.KeywordResponse;
 import org.atdev.artrip.global.apipayload.exception.GeneralException;
+import org.atdev.artrip.service.dto.command.KeywordCommand;
+import org.atdev.artrip.service.dto.result.KeywordResult;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
@@ -26,43 +29,40 @@ public class KeywordService {
     private final UserRepository userRepository;
 
     @Transactional
-    public void saveUserKeywords(Long userId, List<Long> keywordIds) {
+    public void saveKeywords(KeywordCommand command) {
 
-        User user = userRepository.findById(userId)
+        User user = userRepository.findById(command.userId())
                 .orElseThrow(() -> new GeneralException(UserErrorCode._USER_NOT_FOUND));
 
-        userKeywordRepository.deleteByUser(user);
+        Set<String> uniqueNames = new HashSet<>(command.keywords());
+        List<Keyword> keywords = keywordRepository.findAllByNameIn(new ArrayList<>(uniqueNames));
 
-        List<Keyword> keywords = keywordRepository.findAllById(keywordIds);
+        if (keywords.size() != command.keywords().size())
+            throw new GeneralException(KeywordErrorCode._KEYWORD_NOT_FOUND);
+
+        userKeywordRepository.deleteByUserId(command.userId());
 
         List<UserKeyword> userKeywords = keywords.stream()
-                .map(keyword -> UserKeyword.builder()
-                        .user(user)
-                        .keyword(keyword)
-                        .createdAt(LocalDateTime.now())
-                        .build())
+                .map(keyword -> UserKeyword.create(user,keyword))
                 .toList();
 
         userKeywordRepository.saveAll(userKeywords);
     }
 
-    @Transactional
-    public List<KeywordResponse> getAllKeywords() {
+    @Transactional(readOnly = true)
+    public List<KeywordResult> getAllKeywords() {
+
         return keywordRepository.findAll()
                 .stream()
-                .map(k -> new KeywordResponse(k.getKeywordId(), k.getName(), k.getType()))
-                .collect(Collectors.toList());
+                .map(KeywordResult::from)
+                .toList();
     }
 
-    @Transactional
-    public List<KeywordResponse> getUserKeywords(Long userId) {
-        return userKeywordRepository.findAllByUserUserId(userId) // UserKeyword 테이블에서 조회
+    @Transactional(readOnly = true)
+    public List<KeywordResult> getKeyword(Long userId) {
+        return userKeywordRepository.findAllByUserIdWithKeyword(userId)
                 .stream()
-                .map(uk -> new KeywordResponse(
-                        uk.getKeyword().getKeywordId(),
-                        uk.getKeyword().getName(),
-                        uk.getKeyword().getType()
-                ))
-                .collect(Collectors.toList());
+                .map(KeywordResult::from)
+                .toList();
     }
 }
